CATTY-478 New Event category

--- a/src/Catty/Resources/Localization/en.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/en.lproj/Localizable.strings
@@ -605,6 +605,9 @@
 "Error saving file" = "Error saving file";
 
 /* No comment provided by engineer. */
+"Event" = "Event";
+
+/* No comment provided by engineer. */
 "FA" = "FA";
 
 /* No comment provided by engineer. */
