--- a/src/Catty/Resources/Localization/ar.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/ar.lproj/Localizable.strings
@@ -338,6 +338,9 @@
 "Create account" = "إنشاء حساب";
 
 /* No comment provided by engineer. */
+"Data" = "البيانات";
+
+/* No comment provided by engineer. */
 "day" = "اليوم";
 
 /* No comment provided by engineer. */
@@ -600,6 +603,9 @@
 
 /* No comment provided by engineer. */
 "Error saving file" = "Error saving file";
+
+/* No comment provided by engineer. */
+"Event" = "الحدث";
 
 /* No comment provided by engineer. */
 "FA" = "فا";
@@ -1793,9 +1799,6 @@
 "Var/List" = "متغير/قائمة";
 
 /* No comment provided by engineer. */
-"Variable" = "متغير";
-
-/* No comment provided by engineer. */
 "Variable name:" = "اسم المتغير:";
 
 /* No comment provided by engineer. */
@@ -1815,6 +1818,9 @@
 
 /* No comment provided by engineer. */
 "vibration" = "الاهتزاز";
+
+/* No comment provided by engineer. */
+"View" = "View";
 
 /* No comment provided by engineer. */
 "Views" = "عرض";
@@ -1887,6 +1893,9 @@
 
 /* No comment provided by engineer. */
 "Your email seems to be invalid" = "البريد الالكتروني الخاص بك غير صحيح";
+
+/* No comment provided by engineer. */
+"Your project was uploaded to the Catrobat community where others can use and download it." = "Your project was uploaded to the Catrobat community where others can use and download it.";
 
 /* paint */
 "Zoom" = "Zoom";
