--- a/src/Catty/Resources/Localization/bn.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/bn.lproj/Localizable.strings
@@ -338,6 +338,9 @@
 "Create account" = "অ্যাকাউন্ট তৈরি করুন";
 
 /* No comment provided by engineer. */
+"Data" = "তথ্য";
+
+/* No comment provided by engineer. */
 "day" = "দিন";
 
 /* No comment provided by engineer. */
@@ -600,6 +603,9 @@
 
 /* No comment provided by engineer. */
 "Error saving file" = "ফাইল সংরক্ষণে ভুল";
+
+/* No comment provided by engineer. */
+"Event" = "ঘটনা";
 
 /* No comment provided by engineer. */
 "FA" = "এফএ";
@@ -1793,9 +1799,6 @@
 "Var/List" = "ভেরিয়েবল / তালিকা";
 
 /* No comment provided by engineer. */
-"Variable" = "ভেরিয়েবল";
-
-/* No comment provided by engineer. */
 "Variable name:" = "ভেরিয়েবল নাম";
 
 /* No comment provided by engineer. */
@@ -1815,6 +1818,9 @@
 
 /* No comment provided by engineer. */
 "vibration" = "কম্পন";
+
+/* No comment provided by engineer. */
+"View" = "View";
 
 /* No comment provided by engineer. */
 "Views" = "দেখুনঃ";
@@ -1887,6 +1893,9 @@
 
 /* No comment provided by engineer. */
 "Your email seems to be invalid" = "আপনার ইমেলটি অবৈধ বলে মনে হচ্ছে";
+
+/* No comment provided by engineer. */
+"Your project was uploaded to the Catrobat community where others can use and download it." = "Your project was uploaded to the Catrobat community where others can use and download it.";
 
 /* paint */
 "Zoom" = "দৃশ্যমান";
