--- a/src/Catty/Resources/Localization/de.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/de.lproj/Localizable.strings
@@ -338,6 +338,9 @@
 "Create account" = "Konto erstellen";
 
 /* No comment provided by engineer. */
+"Data" = "Daten";
+
+/* No comment provided by engineer. */
 "day" = "Tag";
 
 /* No comment provided by engineer. */
@@ -600,6 +603,9 @@
 
 /* No comment provided by engineer. */
 "Error saving file" = "Fehler beim Speicher der Datei";
+
+/* No comment provided by engineer. */
+"Event" = "Event";
 
 /* No comment provided by engineer. */
 "FA" = "FA";
@@ -944,7 +950,7 @@
 "minute" = "Minute";
 
 /* paint */
-"Mirror" = "Mirror";
+"Mirror" = "Spiegeln";
 
 /* No comment provided by engineer. */
 "Mo" = "Mo";
@@ -1382,7 +1388,7 @@
 "Say" = "Sage";
 
 /* No comment provided by engineer. */
-"Scene" = "Scene";
+"Scene" = "Szene";
 
 /* No comment provided by engineer. */
 "Script" = "Skript";
@@ -1793,9 +1799,6 @@
 "Var/List" = "Var/Liste";
 
 /* No comment provided by engineer. */
-"Variable" = "Variable 1";
-
-/* No comment provided by engineer. */
 "Variable name:" = "Variablennamen:";
 
 /* No comment provided by engineer. */
@@ -1815,6 +1818,9 @@
 
 /* No comment provided by engineer. */
 "vibration" = "Vibration";
+
+/* No comment provided by engineer. */
+"View" = "Ansehen";
 
 /* No comment provided by engineer. */
 "Views" = "Aufrufe";
@@ -1887,6 +1893,9 @@
 
 /* No comment provided by engineer. */
 "Your email seems to be invalid" = "Deine E-Mail Adresse scheint ungültig zu sein";
+
+/* No comment provided by engineer. */
+"Your project was uploaded to the Catrobat community where others can use and download it." = "Dein Projekt wurde in die Catrobat Community hochgeladen, wo andere es verwenden und herunterladen können.";
 
 /* paint */
 "Zoom" = "Vergrößern";
