--- a/src/Catty/Resources/Localization/es.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/es.lproj/Localizable.strings
@@ -338,6 +338,9 @@
 "Create account" = "Crear una cuenta";
 
 /* No comment provided by engineer. */
+"Data" = "Datos";
+
+/* No comment provided by engineer. */
 "day" = "día";
 
 /* No comment provided by engineer. */
@@ -600,6 +603,9 @@
 
 /* No comment provided by engineer. */
 "Error saving file" = "Error al guardar el archivo";
+
+/* No comment provided by engineer. */
+"Event" = "Eventos";
 
 /* No comment provided by engineer. */
 "FA" = "FA";
@@ -1793,9 +1799,6 @@
 "Var/List" = "Variable/Lista";
 
 /* No comment provided by engineer. */
-"Variable" = "Variable";
-
-/* No comment provided by engineer. */
 "Variable name:" = "Nombre de la variable:";
 
 /* No comment provided by engineer. */
@@ -1815,6 +1818,9 @@
 
 /* No comment provided by engineer. */
 "vibration" = "vibración";
+
+/* No comment provided by engineer. */
+"View" = "View";
 
 /* No comment provided by engineer. */
 "Views" = "Vistas";
@@ -1887,6 +1893,9 @@
 
 /* No comment provided by engineer. */
 "Your email seems to be invalid" = "Tu correo electrónico parece ser no válido";
+
+/* No comment provided by engineer. */
+"Your project was uploaded to the Catrobat community where others can use and download it." = "Your project was uploaded to the Catrobat community where others can use and download it.";
 
 /* paint */
 "Zoom" = "Zoom";
