--- a/src/Catty/Resources/Localization/hu.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/hu.lproj/Localizable.strings
@@ -338,6 +338,9 @@
 "Create account" = "Create account";
 
 /* No comment provided by engineer. */
+"Data" = "Adatok";
+
+/* No comment provided by engineer. */
 "day" = "day";
 
 /* No comment provided by engineer. */
@@ -600,6 +603,9 @@
 
 /* No comment provided by engineer. */
 "Error saving file" = "Error saving file";
+
+/* No comment provided by engineer. */
+"Event" = "Esemény";
 
 /* No comment provided by engineer. */
 "FA" = "FA";
@@ -1793,9 +1799,6 @@
 "Var/List" = "Var/List";
 
 /* No comment provided by engineer. */
-"Variable" = "Variable";
-
-/* No comment provided by engineer. */
 "Variable name:" = "Változó neve:";
 
 /* No comment provided by engineer. */
@@ -1815,6 +1818,9 @@
 
 /* No comment provided by engineer. */
 "vibration" = "vibration";
+
+/* No comment provided by engineer. */
+"View" = "View";
 
 /* No comment provided by engineer. */
 "Views" = "Megtekintések";
@@ -1844,7 +1850,7 @@
 "When" = "When";
 
 /* No comment provided by engineer. */
-"When background changes to" = "When background changes to";
+"When background changes to" = "Amikor a háttér átvált erre";
 
 /* No comment provided by engineer. */
 "When project starts" = "When project starts";
@@ -1887,6 +1893,9 @@
 
 /* No comment provided by engineer. */
 "Your email seems to be invalid" = "A megadott e-mail cim érvénytelennek tűnik";
+
+/* No comment provided by engineer. */
+"Your project was uploaded to the Catrobat community where others can use and download it." = "Your project was uploaded to the Catrobat community where others can use and download it.";
 
 /* paint */
 "Zoom" = "Zoom";
