--- a/src/Catty/Resources/Localization/it.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/it.lproj/Localizable.strings
@@ -338,6 +338,9 @@
 "Create account" = "Crea account";
 
 /* No comment provided by engineer. */
+"Data" = "Dati";
+
+/* No comment provided by engineer. */
 "day" = "giorno";
 
 /* No comment provided by engineer. */
@@ -600,6 +603,9 @@
 
 /* No comment provided by engineer. */
 "Error saving file" = "Errore durante il salvataggio del file";
+
+/* No comment provided by engineer. */
+"Event" = "Evento";
 
 /* No comment provided by engineer. */
 "FA" = "FA";
@@ -1793,9 +1799,6 @@
 "Var/List" = "Variabile/Lista";
 
 /* No comment provided by engineer. */
-"Variable" = "Variabile";
-
-/* No comment provided by engineer. */
 "Variable name:" = "Nome variabile:";
 
 /* No comment provided by engineer. */
@@ -1815,6 +1818,9 @@
 
 /* No comment provided by engineer. */
 "vibration" = "vibrazione";
+
+/* No comment provided by engineer. */
+"View" = "Mostra";
 
 /* No comment provided by engineer. */
 "Views" = "Visualizzazioni";
@@ -1887,6 +1893,9 @@
 
 /* No comment provided by engineer. */
 "Your email seems to be invalid" = "La tua e-mail sembra non essere valida";
+
+/* No comment provided by engineer. */
+"Your project was uploaded to the Catrobat community where others can use and download it." = "Il tuo progetto è stato caricato nella Catrobat Community  dove altri possono usarlo e scaricarlo.";
 
 /* paint */
 "Zoom" = "Zoom";
