--- a/src/Catty/Resources/Localization/pl.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/pl.lproj/Localizable.strings
@@ -338,10 +338,13 @@
 "Create account" = "Utwórz konto";
 
 /* No comment provided by engineer. */
+"Data" = "Dane";
+
+/* No comment provided by engineer. */
 "day" = "dzień";
 
 /* No comment provided by engineer. */
-"debug" = "debug";
+"debug" = "Debuguj";
 
 /* No comment provided by engineer. */
 "Dec" = "gru";
@@ -449,10 +452,10 @@
 "Disable brick" = "Wyłącz bloczek";
 
 /* No comment provided by engineer. */
-"Disable condition" = "Disable condition";
+"Disable condition" = "Wyłącz warunek";
 
 /* No comment provided by engineer. */
-"Disable loop" = "Disable loop";
+"Disable loop" = "Wyłącz pętle";
 
 /* No comment provided by engineer. */
 "Disable script" = "Wyłącz skrypt";
@@ -545,16 +548,16 @@
 "Email" = "Adres e-mail";
 
 /* No comment provided by engineer. */
-"Empty input!" = "Empty input!";
+"Empty input!" = "Puste wejście!";
 
 /* No comment provided by engineer. */
 "Enable brick" = "Włącz bloczek";
 
 /* No comment provided by engineer. */
-"Enable condition" = "Enable condition";
+"Enable condition" = "Włącz warunek";
 
 /* No comment provided by engineer. */
-"Enable loop" = "Enable loop";
+"Enable loop" = "Włącz pętlę";
 
 /* No comment provided by engineer. */
 "Enable script" = "Włącz skrypt";
@@ -600,6 +603,9 @@
 
 /* No comment provided by engineer. */
 "Error saving file" = "Błąd zapisu pliku";
+
+/* No comment provided by engineer. */
+"Event" = "Wydarzenie";
 
 /* No comment provided by engineer. */
 "FA" = "FA";
@@ -1013,7 +1019,7 @@
 "New" = "Nowy";
 
 /* paint */
-"New canvas" = "New canvas";
+"New canvas" = "Nowe tło";
 
 /* No comment provided by engineer. */
 "New list" = "Nowa lista";
@@ -1049,7 +1055,7 @@
 "No camera available" = "Aparat niedostępny";
 
 /* No comment provided by engineer. */
-"No categories selected" = "No categories selected";
+"No categories selected" = "Nie wybrano żadnej kategorii";
 
 /* No comment provided by engineer. */
 "No description available" = "Brak opisu";
@@ -1793,9 +1799,6 @@
 "Var/List" = "Zmienna/lista";
 
 /* No comment provided by engineer. */
-"Variable" = "Zmienna";
-
-/* No comment provided by engineer. */
 "Variable name:" = "Nazwa zmiennej:";
 
 /* No comment provided by engineer. */
@@ -1815,6 +1818,9 @@
 
 /* No comment provided by engineer. */
 "vibration" = "wibracje";
+
+/* No comment provided by engineer. */
+"View" = "View";
 
 /* No comment provided by engineer. */
 "Views" = "widoki";
@@ -1887,6 +1893,9 @@
 
 /* No comment provided by engineer. */
 "Your email seems to be invalid" = "Twój e-mail wydaje się być nieprawidłowy";
+
+/* No comment provided by engineer. */
+"Your project was uploaded to the Catrobat community where others can use and download it." = "Your project was uploaded to the Catrobat community where others can use and download it.";
 
 /* paint */
 "Zoom" = "Powiększ";
