--- a/src/Catty/Resources/Localization/pt-BR.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/pt-BR.lproj/Localizable.strings
@@ -50,7 +50,7 @@
 "Agree" = "Concordar";
 
 /* No comment provided by engineer. */
-"all around" = "all around";
+"all around" = "todo mundo";
 
 /* No comment provided by engineer. */
 "All Bluetooth devices successfully disconnected" = "Todos os dispositivos Bluetooth foram desligados com sucesso";
@@ -338,6 +338,9 @@
 "Create account" = "Criar conta";
 
 /* No comment provided by engineer. */
+"Data" = "Dados";
+
+/* No comment provided by engineer. */
 "day" = "dia";
 
 /* No comment provided by engineer. */
@@ -600,6 +603,9 @@
 
 /* No comment provided by engineer. */
 "Error saving file" = "Erro ao salvar o arquivo";
+
+/* No comment provided by engineer. */
+"Event" = "Evento";
 
 /* No comment provided by engineer. */
 "FA" = "Fá";
@@ -1793,9 +1799,6 @@
 "Var/List" = "Variável/Lista";
 
 /* No comment provided by engineer. */
-"Variable" = "Variável 1";
-
-/* No comment provided by engineer. */
 "Variable name:" = "Nome da variável:";
 
 /* No comment provided by engineer. */
@@ -1815,6 +1818,9 @@
 
 /* No comment provided by engineer. */
 "vibration" = "vibração";
+
+/* No comment provided by engineer. */
+"View" = "View";
 
 /* No comment provided by engineer. */
 "Views" = "Visualizações";
@@ -1887,6 +1893,9 @@
 
 /* No comment provided by engineer. */
 "Your email seems to be invalid" = "Seu e-mail parece ser inválido";
+
+/* No comment provided by engineer. */
+"Your project was uploaded to the Catrobat community where others can use and download it." = "Your project was uploaded to the Catrobat community where others can use and download it.";
 
 /* paint */
 "Zoom" = "Ampliar";
