--- a/src/Catty/Resources/Localization/ru.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/ru.lproj/Localizable.strings
@@ -50,7 +50,7 @@
 "Agree" = "Принять";
 
 /* No comment provided by engineer. */
-"all around" = "all around";
+"all around" = "вокруг";
 
 /* No comment provided by engineer. */
 "All Bluetooth devices successfully disconnected" = "Все Bluetooth устройства успешно отключены";
@@ -338,6 +338,9 @@
 "Create account" = "Зарегистрироваться";
 
 /* No comment provided by engineer. */
+"Data" = "Данные";
+
+/* No comment provided by engineer. */
 "day" = "день";
 
 /* No comment provided by engineer. */
@@ -600,6 +603,9 @@
 
 /* No comment provided by engineer. */
 "Error saving file" = "Ошибка сохранения файла";
+
+/* No comment provided by engineer. */
+"Event" = "Событие";
 
 /* No comment provided by engineer. */
 "FA" = "ФА";
@@ -1256,7 +1262,7 @@
 "position y" = "координата_y";
 
 /* No comment provided by engineer. */
-"Preview" = "Снимок";
+"Preview" = "Предпросмотр";
 
 /* No comment provided by engineer. */
 "Previous background" = "Предыдущий фон";
@@ -1499,7 +1505,7 @@
 "Settings" = "Настройки";
 
 /* No comment provided by engineer. */
-"Show" = "Показать";
+"Show" = "Посмотреть";
 
 /* No comment provided by engineer. */
 "Show details" = "Показать детали";
@@ -1793,9 +1799,6 @@
 "Var/List" = "Переменная/Список";
 
 /* No comment provided by engineer. */
-"Variable" = "Переменная";
-
-/* No comment provided by engineer. */
 "Variable name:" = "Имя переменной:";
 
 /* No comment provided by engineer. */
@@ -1815,6 +1818,9 @@
 
 /* No comment provided by engineer. */
 "vibration" = "вибрация";
+
+/* No comment provided by engineer. */
+"View" = "View";
 
 /* No comment provided by engineer. */
 "Views" = "Просмотры";
@@ -1887,6 +1893,9 @@
 
 /* No comment provided by engineer. */
 "Your email seems to be invalid" = "Ваш электронный адрес, похоже, не действителен.";
+
+/* No comment provided by engineer. */
+"Your project was uploaded to the Catrobat community where others can use and download it." = "Ваш проект был загружен в сообщество Catrobat, где его могут использовать и загружать другие.";
 
 /* paint */
 "Zoom" = "Масштаб";
