--- a/src/Catty/Resources/Localization/sr-CS.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/sr-CS.lproj/Localizable.strings
@@ -338,6 +338,9 @@
 "Create account" = "Napravite nalog";
 
 /* No comment provided by engineer. */
+"Data" = "Podaci";
+
+/* No comment provided by engineer. */
 "day" = "dan";
 
 /* No comment provided by engineer. */
@@ -600,6 +603,9 @@
 
 /* No comment provided by engineer. */
 "Error saving file" = "Greška prilikom čuvanja datoteke";
+
+/* No comment provided by engineer. */
+"Event" = "Događaj";
 
 /* No comment provided by engineer. */
 "FA" = "FA";
@@ -1793,9 +1799,6 @@
 "Var/List" = "Var/List";
 
 /* No comment provided by engineer. */
-"Variable" = "Varijabla";
-
-/* No comment provided by engineer. */
 "Variable name:" = "Ime promenljive:";
 
 /* No comment provided by engineer. */
@@ -1815,6 +1818,9 @@
 
 /* No comment provided by engineer. */
 "vibration" = "vibracija";
+
+/* No comment provided by engineer. */
+"View" = "View";
 
 /* No comment provided by engineer. */
 "Views" = "pregleda";
@@ -1887,6 +1893,9 @@
 
 /* No comment provided by engineer. */
 "Your email seems to be invalid" = "Tvoja e-mail adresa je nevažeća";
+
+/* No comment provided by engineer. */
+"Your project was uploaded to the Catrobat community where others can use and download it." = "Your project was uploaded to the Catrobat community where others can use and download it.";
 
 /* paint */
 "Zoom" = "Uvеćaj";
