--- a/src/Catty/Resources/Localization/ta.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/ta.lproj/Localizable.strings
@@ -338,6 +338,9 @@
 "Create account" = "கணக்கை உருவாக்கவும்";
 
 /* No comment provided by engineer. */
+"Data" = "தகவல்கள்";
+
+/* No comment provided by engineer. */
 "day" = "நாள்";
 
 /* No comment provided by engineer. */
@@ -600,6 +603,9 @@
 
 /* No comment provided by engineer. */
 "Error saving file" = "கோப்பைச் சேமிப்பதில் பிழை";
+
+/* No comment provided by engineer. */
+"Event" = "நிகழ்வு";
 
 /* No comment provided by engineer. */
 "FA" = "FA";
@@ -1793,9 +1799,6 @@
 "Var/List" = "Var / பட்டியல்";
 
 /* No comment provided by engineer. */
-"Variable" = "மாறி";
-
-/* No comment provided by engineer. */
 "Variable name:" = "மாறியின் பெயர்:";
 
 /* No comment provided by engineer. */
@@ -1815,6 +1818,9 @@
 
 /* No comment provided by engineer. */
 "vibration" = "அதிர்வு";
+
+/* No comment provided by engineer. */
+"View" = "View";
 
 /* No comment provided by engineer. */
 "Views" = "பார்வைகள்";
@@ -1887,6 +1893,9 @@
 
 /* No comment provided by engineer. */
 "Your email seems to be invalid" = "உங்கள் மின்னஞ்சல் தவறானது என்று தெரிகிறது";
+
+/* No comment provided by engineer. */
+"Your project was uploaded to the Catrobat community where others can use and download it." = "Your project was uploaded to the Catrobat community where others can use and download it.";
 
 /* paint */
 "Zoom" = "பெரிதாக்கு";
