--- a/src/Catty/Resources/Localization/th.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/th.lproj/Localizable.strings
@@ -50,7 +50,7 @@
 "Agree" = "ตกลง";
 
 /* No comment provided by engineer. */
-"all around" = "all around";
+"all around" = "รอบ ๆ";
 
 /* No comment provided by engineer. */
 "All Bluetooth devices successfully disconnected" = "All Bluetooth devices successfully disconnected";
@@ -338,6 +338,9 @@
 "Create account" = "Create account";
 
 /* No comment provided by engineer. */
+"Data" = "ข้อมูล";
+
+/* No comment provided by engineer. */
 "day" = "day";
 
 /* No comment provided by engineer. */
@@ -600,6 +603,9 @@
 
 /* No comment provided by engineer. */
 "Error saving file" = "Error saving file";
+
+/* No comment provided by engineer. */
+"Event" = "เหตุการณ์";
 
 /* No comment provided by engineer. */
 "FA" = "FA";
@@ -1793,9 +1799,6 @@
 "Var/List" = "Var/List";
 
 /* No comment provided by engineer. */
-"Variable" = "ตัวแปร";
-
-/* No comment provided by engineer. */
 "Variable name:" = "ชื่อตัวแปร:";
 
 /* No comment provided by engineer. */
@@ -1815,6 +1818,9 @@
 
 /* No comment provided by engineer. */
 "vibration" = "vibration";
+
+/* No comment provided by engineer. */
+"View" = "View";
 
 /* No comment provided by engineer. */
 "Views" = "มุมมอง";
@@ -1887,6 +1893,9 @@
 
 /* No comment provided by engineer. */
 "Your email seems to be invalid" = "อีเมล์ของคุณดูเหมือนจะไม่ถูกต้อง";
+
+/* No comment provided by engineer. */
+"Your project was uploaded to the Catrobat community where others can use and download it." = "Your project was uploaded to the Catrobat community where others can use and download it.";
 
 /* paint */
 "Zoom" = "Zoom";
