--- a/src/Catty/Resources/Localization/tr.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/tr.lproj/Localizable.strings
@@ -338,6 +338,9 @@
 "Create account" = "Hesap açmak";
 
 /* No comment provided by engineer. */
+"Data" = "Veri";
+
+/* No comment provided by engineer. */
 "day" = "gün";
 
 /* No comment provided by engineer. */
@@ -600,6 +603,9 @@
 
 /* No comment provided by engineer. */
 "Error saving file" = "Dosya kaydedilirken hata oluştu";
+
+/* No comment provided by engineer. */
+"Event" = "Etkinlik";
 
 /* No comment provided by engineer. */
 "FA" = "FA";
@@ -1793,9 +1799,6 @@
 "Var/List" = "Var/Liste";
 
 /* No comment provided by engineer. */
-"Variable" = "Değişken";
-
-/* No comment provided by engineer. */
 "Variable name:" = "Değişkenin adı:";
 
 /* No comment provided by engineer. */
@@ -1815,6 +1818,9 @@
 
 /* No comment provided by engineer. */
 "vibration" = "titreşim";
+
+/* No comment provided by engineer. */
+"View" = "Görüntüle";
 
 /* No comment provided by engineer. */
 "Views" = "Görünümler";
@@ -1887,6 +1893,9 @@
 
 /* No comment provided by engineer. */
 "Your email seems to be invalid" = "E-posta adresiniz geçersiz görünüyor";
+
+/* No comment provided by engineer. */
+"Your project was uploaded to the Catrobat community where others can use and download it." = "Projeniz, diğerleri tarafından kullanılıp indirilebileceği Catrobat topluluğuna yüklendi. ";
 
 /* paint */
 "Zoom" = "yakınlaştırma";
