--- a/src/Catty/Resources/Localization/ur.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/ur.lproj/Localizable.strings
@@ -338,6 +338,9 @@
 "Create account" = "اکاؤنٹ بنائیں\n";
 
 /* No comment provided by engineer. */
+"Data" = "ڈیٹا";
+
+/* No comment provided by engineer. */
 "day" = "دن";
 
 /* No comment provided by engineer. */
@@ -600,6 +603,9 @@
 
 /* No comment provided by engineer. */
 "Error saving file" = "فائل کو بچانے میں خرابی";
+
+/* No comment provided by engineer. */
+"Event" = "واقعہ";
 
 /* No comment provided by engineer. */
 "FA" = "FA";
@@ -1793,9 +1799,6 @@
 "Var/List" = "متغیر / فہرست";
 
 /* No comment provided by engineer. */
-"Variable" = "متغیر";
-
-/* No comment provided by engineer. */
 "Variable name:" = "متغیر نام";
 
 /* No comment provided by engineer. */
@@ -1815,6 +1818,9 @@
 
 /* No comment provided by engineer. */
 "vibration" = "وائبریشن";
+
+/* No comment provided by engineer. */
+"View" = "View";
 
 /* No comment provided by engineer. */
 "Views" = "مناظر";
@@ -1887,6 +1893,9 @@
 
 /* No comment provided by engineer. */
 "Your email seems to be invalid" = "آپکی ای میل غلط لگ رہی ہے";
+
+/* No comment provided by engineer. */
+"Your project was uploaded to the Catrobat community where others can use and download it." = "Your project was uploaded to the Catrobat community where others can use and download it.";
 
 /* paint */
 "Zoom" = "Zoom";
