--- a/src/Catty/Resources/Localization/zh-Hans.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/zh-Hans.lproj/Localizable.strings
@@ -338,6 +338,9 @@
 "Create account" = "创造帐户";
 
 /* No comment provided by engineer. */
+"Data" = "数据";
+
+/* No comment provided by engineer. */
 "day" = "日";
 
 /* No comment provided by engineer. */
@@ -600,6 +603,9 @@
 
 /* No comment provided by engineer. */
 "Error saving file" = "存储文件时发生错误";
+
+/* No comment provided by engineer. */
+"Event" = "事件";
 
 /* No comment provided by engineer. */
 "FA" = "FA";
@@ -1793,9 +1799,6 @@
 "Var/List" = "Var/List";
 
 /* No comment provided by engineer. */
-"Variable" = "变量";
-
-/* No comment provided by engineer. */
 "Variable name:" = "变量名:";
 
 /* No comment provided by engineer. */
@@ -1815,6 +1818,9 @@
 
 /* No comment provided by engineer. */
 "vibration" = "振动";
+
+/* No comment provided by engineer. */
+"View" = "View";
 
 /* No comment provided by engineer. */
 "Views" = "查看";
@@ -1887,6 +1893,9 @@
 
 /* No comment provided by engineer. */
 "Your email seems to be invalid" = "您的电子邮件是无效的";
+
+/* No comment provided by engineer. */
+"Your project was uploaded to the Catrobat community where others can use and download it." = "Your project was uploaded to the Catrobat community where others can use and download it.";
 
 /* paint */
 "Zoom" = "Zoom";
